final/netpol-nginx.yaml
##nginx-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.108.82.192/32  # tunl0
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
    - podSelector:         # 수신을 허용하는 Pod의 label 설정
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    - podSelector:         # 수신을 허용하는 Pod의 label 설정
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:         # 수신을 허용하는 Pod의 label 설정
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: frontend
    - podSelector:         # 수신을 허용하는 Pod의 label 설정
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 3000
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: backend
    - podSelector:         # 수신을 허용하는 Pod의 label 설정
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 8000
